--- a/paper/References.bib
+++ b/paper/References.bib
@@ -33,7 +33,7 @@ OPTurldate = {•},
 }
 
 @online{yrobla,
-author = {yrobla},
+author = {Yrobla},
 title = {Base docker image to run a Repcached server},
 url = {https://github.com/yrobla/docker-repcached},
 OPTsubtitle = {•},
@@ -41,6 +41,23 @@ OPTtitleaddon = {•},
 OPTlanguage = {•},
 OPTversion = {•},
 note = {[Accessed: 10- Nov- 2018]},
+OPTorganization = {•},
+OPTdate = {•},
+OPTmonth = {•},
+OPTaddendum = {•},
+OPTpubstate = {•},
+OPTurldate = {•},
+}
+
+@online{redis,
+author = {Redislabs},
+title = {Redis},
+url = {https://redis.io/},
+OPTsubtitle = {•},
+OPTtitleaddon = {•},
+OPTlanguage = {•},
+OPTversion = {•},
+note = {[Accessed: 17- Nov- 2018]},
 OPTorganization = {•},
 OPTdate = {•},
 OPTmonth = {•},
