Inclusão do artigo

--- a/paper/References.bib
+++ b/paper/References.bib
@@ -2,66 +2,57 @@
 author = {Docker},
 title = {Docker},
 url = {https://www.docker.com/},
-OPTsubtitle = {•},
-OPTtitleaddon = {•},
-OPTlanguage = {•},
-OPTversion = {•},
-note = {[Accessed: 15- Nov- 2018]},
-OPTorganization = {•},
-OPTdate = {•},
-OPTmonth = {•},
-OPTaddendum = {•},
-OPTpubstate = {•},
-OPTurldate = {•},
+note = {[Accessed: 15- Nov- 2018]}
 }
 
 @online{repcached,
 author = {KLab Inc.},
 title = {Repcached},
 url = {http://repcached.lab.klab.org/},
-OPTsubtitle = {•},
-OPTtitleaddon = {•},
-OPTlanguage = {•},
-OPTversion = {•},
-note = {[Accessed: 15- Nov- 2018]},
-OPTorganization = {•},
-OPTdate = {•},
-OPTmonth = {•},
-OPTaddendum = {•},
-OPTpubstate = {•},
-OPTurldate = {•},
+note = {[Accessed: 15- Nov- 2018]}
+}
+
+@online{memcached,
+author = {Packet},
+title = {Memcached},
+url = {https://memcached.org/},
+note = {[Accessed: 18- Nov- 2018]}
 }
 
 @online{yrobla,
 author = {Yrobla},
 title = {Base docker image to run a Repcached server},
 url = {https://github.com/yrobla/docker-repcached},
-OPTsubtitle = {•},
-OPTtitleaddon = {•},
-OPTlanguage = {•},
-OPTversion = {•},
-note = {[Accessed: 10- Nov- 2018]},
-OPTorganization = {•},
-OPTdate = {•},
-OPTmonth = {•},
-OPTaddendum = {•},
-OPTpubstate = {•},
-OPTurldate = {•},
+note = {[Accessed: 10- Nov- 2018]}
 }
 
-@online{redis,
-author = {Redislabs},
-title = {Redis},
-url = {https://redis.io/},
-OPTsubtitle = {•},
-OPTtitleaddon = {•},
-OPTlanguage = {•},
-OPTversion = {•},
-note = {[Accessed: 17- Nov- 2018]},
-OPTorganization = {•},
-OPTdate = {•},
-OPTmonth = {•},
-OPTaddendum = {•},
-OPTpubstate = {•},
-OPTurldate = {•},
+@online{herman,
+author = {Jonathan Herman},
+title = {Fault-Tolerance in Avionics Systems},
+url = {https://cs.unc.edu/~anderson/teach/comp790/powerpoints/fault_tolerance.pptx},
+note = {[Accessed: 18- Nov- 2018]}
 }
+
+@online{phpmemcachedserver,
+author = {PHP},
+title = {Memcached::addServers},
+url = {http://php.net/manual/en/memcached.addservers.php},
+note = {[Accessed: 18- Nov- 2018]}
+}
+
+
+@patent{cachepatent,
+author = {Kevin Michael Jordan, Kun-Lunk Wu, Philip Shi-Lung Yu},
+title = {Load Balancing Cooperating Cache Servers by Shifting Forwarded Request},
+number = {US 6438652},
+year = {2002}
+}
+
+@book{Tanenbaum:2006:DSP:1202502,
+ author = {Andrew S. Tanenbaum, Maarten van Steen},
+ title = {Distributed Systems: Principles and Paradigms (2Nd Edition)},
+ year = {2006},
+ isbn = {0132392275},
+ publisher = {Prentice-Hall, Inc.},
+ address = {Upper Saddle River, NJ, USA}
+} 
